holyc-parser/tests/corpus/passing/177-surprises-surprise-missing-rbrace-fn.hc
U0 EMR_f() { I64 a=1;
