holyc-parser/tests/corpus/failing/019-errors-err-missing-rparen-call.hc
U0 EMRC_f() { } I64 EMRC_g = 1; EMRC_f(
